--- a/oop/izpit/.vscode/settings.json
+++ b/oop/izpit/.vscode/settings.json
@@ -46,7 +46,6 @@
     "streambuf": "cpp",
     "typeinfo": "cpp",
     "ctime": "cpp",
-    "iomanip": "cpp",
-    "list": "cpp"
+    "iomanip": "cpp"
   }
 }
